--- a/SORTEIO/Lstyle.css
+++ b/SORTEIO/Lstyle.css
@@ -18,7 +18,7 @@
     background-color: #ffffff10;;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    padding: 20px;
+    padding: 60px;
     width: 80%;
     max-width: 400px;
     border: 2px solid #ffffff20;
@@ -29,13 +29,14 @@
   .sorteio h2 {
     font-size: 24px;
     margin-bottom: 10px;
-    color: #333;
+    color: black;
+  
   }
   
 
   .linha {
     height: 2px;
-    background-color: #333;
+    background-color: white;
     margin: 10px 0;
   }
   
@@ -62,7 +63,7 @@
   
 
   .sortear {
-    background-color: #333;
+    background-color:  #d75413;
     color: #fff;
     padding: 10px 20px;
     border: none;
@@ -70,10 +71,11 @@
     cursor: pointer;
     font-size: 16px;
     margin-top: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   }
   
   .sortear:hover {
-    background-color: #555;
+    background-color:#d754;
   }
   
   .resultado {
@@ -83,7 +85,7 @@
  
   .resultado p {
     font-size: 18px;
-    color: #333;
+    color: black;
   }
   
   
