--- a/SORTEIO/Nstyle.css
+++ b/SORTEIO/Nstyle.css
@@ -30,7 +30,7 @@ body {
 
 .titulo h2 {
   font-size: 24px;
-  color: #333;
+  color: black;
   margin-bottom: 20px;
 }
 
@@ -43,7 +43,7 @@ body {
 
 .entrada label {
   font-size: 16px;
-  color: #333;
+  color: black;
   display: block;
   margin-bottom: 5px;
 }
